modification de la scrollbarr ax y et correction des apo par &apos;

--- a/src/Components/Product/SearchProduct.css
+++ b/src/Components/Product/SearchProduct.css
@@ -123,7 +123,8 @@
   margin-top: 1rem;
   display: grid;
   grid-template-columns: repeat(6, 80vw);
-  overflow: scroll;
+  overflow-x: scroll;
+  scrollbar-width: none;
   height: 15vh;
 }
 
